dist/udemy/bootcamp/backend/YelpCamp/v10/readme.md
#YelpCamp

#Initial Setup
* Add Landing Page
* Add Campgrounds Page that lists all campgrounds

Each Campground has:
    * Name
    * Image

#Layout and Basic Styling
* Create our header and footer partials
* Add in Bootstrap

#Creating New Campgrounds
* Setup new campground POST route
* Add in body-parser
* Setup route to show form
* Add basic unstyled form

#Style the campgrounds page
* Add a better header/title
* Make campgrounds display in a grid

#Style the Navbar and Form
* Add a navbar to all templates
* Style the new campground form

##v2
#Add Mongoose
* Install and configure mongoose
* Setup campground model
* Use campground model inside of our routes

#Show Page
* Review the RESTful routes we've seen ssoo far
* Add description to our campground model
* Show db.collection.drop()
* Add a show route/template

##v3
#Refactor Mongoose Code
* Create a models directory
* Use module.exports
* Require everything correctly

#Add Seeds file
* Add a seeds.js file
* Run the seeds file every time the server starts

#Add the Comment model
* Fix errors
* Display comments on campground show page

##v4
#Comment New/Create
* Discuss nested routes
* Add the comment new and create routes
* Add the comment new form

##v5
#Style Show Page
* Add sidebar to show page
* Display comments nicely

#Finish Styling Show Page
* Add public directory
* Add custom stylesheet

##v6
#Add User Model
* Install all packages needed for auth
* Define User model

#Auth Pt. 1 - Add User model
* Install all poackages needed for auth
* Define User model

#Auth Pt. 2 - Register
* Configure Passport
* Add register routes
* Add register template

#Auth Pt. 3 - Login
* Add login routes
* Add login template

#Auth Pt. 4 - Logout/Navbar
* Add logout route
* Prevent user from adding a comment if not signed in
* Add links to navbar
* Show/hide auth links correctly

#Auth Pt. 5 - Show/Hide Links
* Show/hide auth links in navbar correctly

##v7
#Refactor the routes
* Use Express router to reorganize all routes

##v8
#Users + Comments
* Associate users and comments
* Save author's name to a comment automatically

##v9
#Users + Campgrounds
* Prevent an unauthenticated user from creating a campground
* Save username+id to newly created campground

##v10
##Editing Campgrounds
* Add Method-Override
* Add Edit Route for Campgrounds
* Add link to Edit page
* Add Update Route
* Fix $set problem

#Deleting Campgrounds
* Add Destroy Route
* Add Delete button

#Authorization Part 1: Campgrounds
* User can only edit his/her campgrounds
* User can only delete his/her campgrounds
* Hide/Show edit and delete buttons

#Editing Comments
* Add Edit route for comments
* Add Edit button
* Add Update route

#Deleting Comments
* Add Destroy route
* Add Delete button

#Authorization Part 2: Comments
* User can only edit his/her comments
* User can only delete his/her comments
* Hide/Show edit and delete buttons
* Refactor Middleware